fix regression: properly search for restructured katepart UI

while we are at it, look for share/$appname/katepartui.rc and dont
hardcode kdevelop in kdevplatform code

this should make it possible for Gluon, Quanta, etc to have custom
restructured katepart UIs

BUG: 277267
BUG: 277470